--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -1,1 +1,6 @@
-Test
+= 1.0 =
+* A change since the previous version.
+* Another change.
+ 
+= 0.5 =
+* List versions from most recent at top to oldest at bottom.
