--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -1,5 +1,10 @@
 === Woo Store Vacation (PRO) ===
 
+= 2020.06.X - Version 1.2.0 =
+* Update: Language file.
+* Feature: Exclude product types from being non-purchasable.
+* Feature: Added UTC and local time as a hint above the schedule tables.
+
 = 2020.05.14 - Version 1.1.1 =
 * Fix: Initialize core class to retrieve full translated weekday to support non-English weekday names.
 * Tweak: Display regional language in date and time pickers as per the WordPress setting.
