--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -1,5 +1,9 @@
 === Woo Store Vacation (PRO) ===
 
+= 2020.07.09 - Version 1.2.3 =
+* Update: Language file.
+* Compatibility: WooCommerce 4.3.0
+
 = 2020.06.28 - Version 1.2.2 =
 * Fix: Check the list of defined functions, to make sure plugin class instance is called only once.
 * Fix: Undefined fatal error class definition in checking for automatic plugin updates.
