--- a/languages/woo-store-vacation.pot
+++ b/languages/woo-store-vacation.pot
@@ -2,16 +2,16 @@
 # This file is distributed under the GPL-3.0.
 msgid ""
 msgstr ""
-"Project-Id-Version: Woo Store Vacation 1.5.1\n"
+"Project-Id-Version: Woo Store Vacation 1.6.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/woo-store-vacation\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2022-11-16T17:37:50+00:00\n"
+"POT-Creation-Date: 2022-12-14T09:14:29+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"X-Generator: WP-CLI 2.6.0\n"
+"X-Generator: WP-CLI 2.7.1\n"
 "X-Domain: woo-store-vacation\n"
 
 #. Plugin Name of the plugin
@@ -21,11 +21,11 @@ msgstr ""
 
 #. Plugin URI of the plugin
 #. Author URI of the plugin
-msgid "https://mypreview.github.io/woo-store-vacation"
+msgid "https://mypreview.one/woo-store-vacation"
 msgstr ""
 
 #. Description of the plugin
-msgid "Pause your store temporarily with scheduling your vacation dates and displaying a user-friendly notice at the top of your shop page."
+msgid "Pause your store operations for a set of fixed dates during your vacation and display a user-friendly notice on your shop page."
 msgstr ""
 
 #. Author of the plugin
@@ -259,25 +259,41 @@ msgid "I am currently on vacation and products from my shop will be unavailable 
 msgstr ""
 
 #. translators: 1: Open anchor tag, 2: Close anchor tag.
-#: woo-store-vacation.php:857
-msgctxt "plugin link"
-msgid "%1$sUpgrade to PRO%2$s"
+#: woo-store-vacation.php:856
+msgctxt "plugin settings page"
+msgid "%1$sSettings%2$s"
 msgstr ""
 
 #. translators: 1: Open anchor tag, 2: Close anchor tag.
-#: woo-store-vacation.php:874
+#: woo-store-vacation.php:877
 msgctxt "plugin link"
-msgid "%1$sSupport%2$s"
+msgid "%1$sCommunity support%2$s"
 msgstr ""
 
 #. translators: 1: Open anchor tag, 2: Close anchor tag.
 #: woo-store-vacation.php:879
 msgctxt "plugin link"
-msgid "%1$sSettings%2$s"
+msgid "%1$sDonate%2$s"
+msgstr ""
+
+#. translators: 1: Open anchor tag, 2: Close anchor tag.
+#: woo-store-vacation.php:879
+msgid "Donate to support this plugin"
+msgstr ""
+
+#. translators: 1: Open anchor tag, 2: Close anchor tag.
+#: woo-store-vacation.php:881
+msgctxt "plugin link"
+msgid "%1$sUpgrade to PRO%2$s"
 msgstr ""
 
 #. translators: 1: Dashicon, 2: Plugin name, 3: Open anchor tag, 4: Close anchor tag.
-#: woo-store-vacation.php:895
+#: woo-store-vacation.php:896
 msgctxt "admin notice"
 msgid "%1$s Thanks for installing %2$s plugin! To get started, visit the %3$splugin’s settings page%4$s."
+msgstr ""
+
+#: assets/js/admin.js:80
+#: assets/js/minified/admin.js:1
+msgid "Delete"
 msgstr ""
