--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -1,4 +1,8 @@
 === Woo Store Vacation ===
+= 1.9.1 =
+* Fix: Allow specifying empty values for the text and background color options.
+* Compatibility: WooCommerce 7.8
+
 = 1.9.0 =
 * Feature: Exclude certain products, categories, tags, types, and shipping classes.
 * Refactor: Optimized underlying code structure.
