--- a/docs/CHANGELOG.txt
+++ b/docs/CHANGELOG.txt
@@ -1,6 +1,7 @@
 === Woo Store Vacation ===
 = 1.9.1 =
 * Fix: Allow specifying empty values for the text and background color options.
+* Fix: Hide add to cart button from the single variable product page.
 * Compatibility: WooCommerce 7.8
 
 = 1.9.0 =
